src/main/mt22/parser/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'auto'", "'break'", "'boolean'", "'do'", 
                     "'else'", "'float'", "'for'", "'function'", "'if'", 
                     "'integer'", "'return'", "'string'", "'while'", "'void'", 
                     "'out'", "'continue'", "'of'", "'inherit'", "'array'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", 
                     "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'::'", 
                     "'='", "'('", "')'", "'['", "']'", "'.'", "','", "';'", 
                     "':'", "'{'", "'}'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'readInteger'", 
                     "'printInteger'", "'readFloat'", "'writeFloat'", "'readBoolean'", 
                     "'printBoolean'", "'readString'", "'printString'", 
                     "'super'", "'preventDefault'" ]

    symbolicNames = [ "<INVALID>", "AUTO", "BREAK", "BOOLEAN", "DO", "ELSE", 
                      "FLOAT", "FOR", "FUNCTION", "IF", "INTEGER", "RETURN", 
                      "STRING", "WHILE", "VOID", "OUT", "CONTINUE", "OF", 
                      "INHERIT", "ARRAY", "ADDITION", "SUBTRACTION", "MULTIPLICATION", 
                      "DIVISION", "MODULO", "BOOLEANNOT", "BOOLEANAND", 
                      "BOOLEANOR", "EQUAL", "NOTEQUAL", "LESSTHAN", "LESSTHANOREQUAL", 
                      "GREATERTHAN", "GREATERTHANOREQUAL", "STRINGCONCATENATION", 
                      "ASSIGN", "LB", "RB", "LS", "RS", "POI", "COMMA", 
                      "SEMI_COLON", "COLON", "LP", "RP", "INTEGER_LIT", 
                      "FLOAT_LIT", "BOOLEAN_LIT", "STRING_LIT", "IDEN", 
                      "COMMENTS", "WS", "ERROR_CHAR", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE", "READINT", "PRINTINT", "READFLO", 
                      "WRITEFLO", "READBOOL", "PRINTBOOL", "READSTR", "PRINTSTR", 
                      "SUPER", "PREVENTDEFAULT" ]

    RULE_literal = 0
    RULE_arraylit = 1
    RULE_exprlist = 2
    RULE_expr_prime = 3
    RULE_program = 4
    RULE_classDefinition = 5
    RULE_declaration = 6
    RULE_globalVariableDec = 7
    RULE_shortform = 8
    RULE_identifier_list = 9
    RULE_fullform = 10
    RULE_full_list = 11
    RULE_parameter = 12
    RULE_functionDec = 13
    RULE_function_prototype = 14
    RULE_parameter_list = 15
    RULE_parameters = 16
    RULE_inheritancePart = 17
    RULE_function_body = 18
    RULE_index_oper = 19
    RULE_primitive_type = 20
    RULE_array_type = 21
    RULE_dimensions = 22
    RULE_element_type = 23
    RULE_return_type = 24
    RULE_expr = 25
    RULE_expr1 = 26
    RULE_expr2 = 27
    RULE_expr3 = 28
    RULE_expr4 = 29
    RULE_expr5 = 30
    RULE_expr6 = 31
    RULE_expr7 = 32
    RULE_expr8 = 33
    RULE_statement = 34
    RULE_assignment_statement = 35
    RULE_lhs = 36
    RULE_if_statement = 37
    RULE_else_statement = 38
    RULE_for_statement = 39
    RULE_init_expr = 40
    RULE_init_expr1 = 41
    RULE_init_expr2 = 42
    RULE_init_expr3 = 43
    RULE_while_statement = 44
    RULE_do_while_statement = 45
    RULE_break_statement = 46
    RULE_continue_statement = 47
    RULE_return_statement = 48
    RULE_re_turn = 49
    RULE_call_statement = 50
    RULE_block_statement = 51
    RULE_block_list = 52
    RULE_tmp = 53
    RULE_function_call = 54
    RULE_arguments_list = 55
    RULE_argument = 56
    RULE_special_func = 57
    RULE_readIn = 58
    RULE_printIn = 59
    RULE_readFloa = 60
    RULE_writeFloa = 61
    RULE_readBoo = 62
    RULE_printBoo = 63
    RULE_readStr = 64
    RULE_printStr = 65
    RULE_sup = 66
    RULE_preDefault = 67

    ruleNames =  [ "literal", "arraylit", "exprlist", "expr_prime", "program", 
                   "classDefinition", "declaration", "globalVariableDec", 
                   "shortform", "identifier_list", "fullform", "full_list", 
                   "parameter", "functionDec", "function_prototype", "parameter_list", 
                   "parameters", "inheritancePart", "function_body", "index_oper", 
                   "primitive_type", "array_type", "dimensions", "element_type", 
                   "return_type", "expr", "expr1", "expr2", "expr3", "expr4", 
                   "expr5", "expr6", "expr7", "expr8", "statement", "assignment_statement", 
                   "lhs", "if_statement", "else_statement", "for_statement", 
                   "init_expr", "init_expr1", "init_expr2", "init_expr3", 
                   "while_statement", "do_while_statement", "break_statement", 
                   "continue_statement", "return_statement", "re_turn", 
                   "call_statement", "block_statement", "block_list", "tmp", 
                   "function_call", "arguments_list", "argument", "special_func", 
                   "readIn", "printIn", "readFloa", "writeFloa", "readBoo", 
                   "printBoo", "readStr", "printStr", "sup", "preDefault" ]

    EOF = Token.EOF
    AUTO=1
    BREAK=2
    BOOLEAN=3
    DO=4
    ELSE=5
    FLOAT=6
    FOR=7
    FUNCTION=8
    IF=9
    INTEGER=10
    RETURN=11
    STRING=12
    WHILE=13
    VOID=14
    OUT=15
    CONTINUE=16
    OF=17
    INHERIT=18
    ARRAY=19
    ADDITION=20
    SUBTRACTION=21
    MULTIPLICATION=22
    DIVISION=23
    MODULO=24
    BOOLEANNOT=25
    BOOLEANAND=26
    BOOLEANOR=27
    EQUAL=28
    NOTEQUAL=29
    LESSTHAN=30
    LESSTHANOREQUAL=31
    GREATERTHAN=32
    GREATERTHANOREQUAL=33
    STRINGCONCATENATION=34
    ASSIGN=35
    LB=36
    RB=37
    LS=38
    RS=39
    POI=40
    COMMA=41
    SEMI_COLON=42
    COLON=43
    LP=44
    RP=45
    INTEGER_LIT=46
    FLOAT_LIT=47
    BOOLEAN_LIT=48
    STRING_LIT=49
    IDEN=50
    COMMENTS=51
    WS=52
    ERROR_CHAR=53
    UNCLOSE_STRING=54
    ILLEGAL_ESCAPE=55
    READINT=56
    PRINTINT=57
    READFLO=58
    WRITEFLO=59
    READBOOL=60
    PRINTBOOL=61
    READSTR=62
    PRINTSTR=63
    SUPER=64
    PREVENTDEFAULT=65

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class LiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER_LIT(self):
            return self.getToken(MT22Parser.INTEGER_LIT, 0)

        def FLOAT_LIT(self):
            return self.getToken(MT22Parser.FLOAT_LIT, 0)

        def BOOLEAN_LIT(self):
            return self.getToken(MT22Parser.BOOLEAN_LIT, 0)

        def STRING_LIT(self):
            return self.getToken(MT22Parser.STRING_LIT, 0)

        def arraylit(self):
            return self.getTypedRuleContext(MT22Parser.ArraylitContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_literal

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiteral" ):
                return visitor.visitLiteral(self)
            else:
                return visitor.visitChildren(self)




    def literal(self):

        localctx = MT22Parser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_literal)
        try:
            self.state = 141
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.INTEGER_LIT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 136
                self.match(MT22Parser.INTEGER_LIT)
                pass
            elif token in [MT22Parser.FLOAT_LIT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 137
                self.match(MT22Parser.FLOAT_LIT)
                pass
            elif token in [MT22Parser.BOOLEAN_LIT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 138
                self.match(MT22Parser.BOOLEAN_LIT)
                pass
            elif token in [MT22Parser.STRING_LIT]:
                self.enterOuterAlt(localctx, 4)
                self.state = 139
                self.match(MT22Parser.STRING_LIT)
                pass
            elif token in [MT22Parser.LP]:
                self.enterOuterAlt(localctx, 5)
                self.state = 140
                self.arraylit()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArraylitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(MT22Parser.LP, 0)

        def exprlist(self):
            return self.getTypedRuleContext(MT22Parser.ExprlistContext,0)


        def RP(self):
            return self.getToken(MT22Parser.RP, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_arraylit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArraylit" ):
                return visitor.visitArraylit(self)
            else:
                return visitor.visitChildren(self)




    def arraylit(self):

        localctx = MT22Parser.ArraylitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_arraylit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(MT22Parser.LP)
            self.state = 144
            self.exprlist()
            self.state = 145
            self.match(MT22Parser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr_prime(self):
            return self.getTypedRuleContext(MT22Parser.Expr_primeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_exprlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprlist" ):
                return visitor.visitExprlist(self)
            else:
                return visitor.visitChildren(self)




    def exprlist(self):

        localctx = MT22Parser.ExprlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_exprlist)
        try:
            self.state = 149
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.SUBTRACTION, MT22Parser.BOOLEANNOT, MT22Parser.LB, MT22Parser.LP, MT22Parser.INTEGER_LIT, MT22Parser.FLOAT_LIT, MT22Parser.BOOLEAN_LIT, MT22Parser.STRING_LIT, MT22Parser.IDEN]:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self.expr_prime()
                pass
            elif token in [MT22Parser.RB, MT22Parser.RP]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expr_primeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def expr_prime(self):
            return self.getTypedRuleContext(MT22Parser.Expr_primeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_expr_prime

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_prime" ):
                return visitor.visitExpr_prime(self)
            else:
                return visitor.visitChildren(self)




    def expr_prime(self):

        localctx = MT22Parser.Expr_primeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_expr_prime)
        try:
            self.state = 156
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 151
                self.expr()
                self.state = 152
                self.match(MT22Parser.COMMA)
                self.state = 153
                self.expr_prime()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 155
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classDefinition(self):
            return self.getTypedRuleContext(MT22Parser.ClassDefinitionContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.classDefinition()
            self.state = 159
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(MT22Parser.DeclarationContext,0)


        def classDefinition(self):
            return self.getTypedRuleContext(MT22Parser.ClassDefinitionContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_classDefinition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDefinition" ):
                return visitor.visitClassDefinition(self)
            else:
                return visitor.visitChildren(self)




    def classDefinition(self):

        localctx = MT22Parser.ClassDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_classDefinition)
        try:
            self.state = 165
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 161
                self.declaration()
                self.state = 162
                self.classDefinition()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 164
                self.declaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def globalVariableDec(self):
            return self.getTypedRuleContext(MT22Parser.GlobalVariableDecContext,0)


        def functionDec(self):
            return self.getTypedRuleContext(MT22Parser.FunctionDecContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = MT22Parser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_declaration)
        try:
            self.state = 169
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 167
                self.globalVariableDec()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 168
                self.functionDec()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GlobalVariableDecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMI_COLON(self):
            return self.getToken(MT22Parser.SEMI_COLON, 0)

        def shortform(self):
            return self.getTypedRuleContext(MT22Parser.ShortformContext,0)


        def fullform(self):
            return self.getTypedRuleContext(MT22Parser.FullformContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_globalVariableDec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlobalVariableDec" ):
                return visitor.visitGlobalVariableDec(self)
            else:
                return visitor.visitChildren(self)




    def globalVariableDec(self):

        localctx = MT22Parser.GlobalVariableDecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_globalVariableDec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 171
                self.shortform()
                pass

            elif la_ == 2:
                self.state = 172
                self.fullform()
                pass


            self.state = 175
            self.match(MT22Parser.SEMI_COLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ShortformContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier_list(self):
            return self.getTypedRuleContext(MT22Parser.Identifier_listContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def primitive_type(self):
            return self.getTypedRuleContext(MT22Parser.Primitive_typeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_shortform

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShortform" ):
                return visitor.visitShortform(self)
            else:
                return visitor.visitChildren(self)




    def shortform(self):

        localctx = MT22Parser.ShortformContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_shortform)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            self.identifier_list()
            self.state = 178
            self.match(MT22Parser.COLON)
            self.state = 179
            self.primitive_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Identifier_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDEN(self):
            return self.getToken(MT22Parser.IDEN, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def identifier_list(self):
            return self.getTypedRuleContext(MT22Parser.Identifier_listContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_identifier_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifier_list" ):
                return visitor.visitIdentifier_list(self)
            else:
                return visitor.visitChildren(self)




    def identifier_list(self):

        localctx = MT22Parser.Identifier_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_identifier_list)
        try:
            self.state = 185
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 181
                self.match(MT22Parser.IDEN)
                self.state = 182
                self.match(MT22Parser.COMMA)
                self.state = 183
                self.identifier_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 184
                self.match(MT22Parser.IDEN)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FullformContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDEN(self):
            return self.getToken(MT22Parser.IDEN, 0)

        def full_list(self):
            return self.getTypedRuleContext(MT22Parser.Full_listContext,0)


        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_fullform

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFullform" ):
                return visitor.visitFullform(self)
            else:
                return visitor.visitChildren(self)




    def fullform(self):

        localctx = MT22Parser.FullformContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_fullform)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 187
            self.match(MT22Parser.IDEN)
            self.state = 188
            self.full_list()
            self.state = 189
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Full_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def IDEN(self):
            return self.getToken(MT22Parser.IDEN, 0)

        def full_list(self):
            return self.getTypedRuleContext(MT22Parser.Full_listContext,0)


        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def primitive_type(self):
            return self.getTypedRuleContext(MT22Parser.Primitive_typeContext,0)


        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_full_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFull_list" ):
                return visitor.visitFull_list(self)
            else:
                return visitor.visitChildren(self)




    def full_list(self):
